@@ -18,6 +18,7 @@ libvoikko_la_SOURCES = \
     spellchecker/suggestion/SuggestionGeneratorDeletion.cpp \
     spellchecker/suggestion/SuggestionGeneratorInsertion.cpp \
     spellchecker/suggestion/SuggestionGeneratorInsertSpecial.cpp \
+    spellchecker/suggestion/SuggestionGeneratorMultiReplacement.cpp \
     spellchecker/suggestion/SuggestionGeneratorNull.cpp \
     spellchecker/suggestion/SuggestionGeneratorReplacement.cpp \
     spellchecker/suggestion/SuggestionGeneratorReplaceTwo.cpp \
@@ -116,6 +117,7 @@ noinst_HEADERS = \
     spellchecker/suggestion/SuggestionGeneratorDeletion.hpp \
     spellchecker/suggestion/SuggestionGeneratorInsertion.hpp \
     spellchecker/suggestion/SuggestionGeneratorInsertSpecial.hpp \
+    spellchecker/suggestion/SuggestionGeneratorMultiReplacement.hpp \
     spellchecker/suggestion/SuggestionGeneratorNull.hpp \
     spellchecker/suggestion/SuggestionGeneratorReplacement.hpp \
     spellchecker/suggestion/SuggestionGeneratorReplaceTwo.hpp \
