@@ -1,3 +1,6 @@
+2012-02-11 Harri Pitkänen <hatapitk@iki.fi>
+	* Try replacing two characters in OCR suggestion mode.
+
 2012-01-28 Harri Pitkänen <hatapitk@iki.fi>
 	* Add canonical decompositions for Russian and Komi alphabet.
 
